--- a/views/adviser_hot.html
+++ b/views/adviser_hot.html
@@ -63,7 +63,7 @@
         {{community_nav.adviser_nav_leave('精华', userinfo.uid, helper)}}
         {% else %}#}
         {% if userinfo.usertype == 2 %}
-        {{community_nav.adviser_nav('精华', userinfo.uid, helper)}}
+        {{community_nav.adviser_nav('精华', userinfo, helper)}}
         {% elif userinfo.usertype == 3 %}
         {{community_nav.canzan_nav('精华', userinfo.uid, helper)}}
         {% endif %}
