--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -72,7 +72,7 @@
             {{community_nav.adviser_nav_leave('专栏', userinfo.uid, helper)}}
           {% else %#}
             {% if userinfo.usertype == 2 %}
-             {{community_nav.adviser_nav('专栏', userinfo.uid, helper)}}
+             {{community_nav.adviser_nav('专栏', userinfo, helper)}}
             {% endif %}
           {#% endif %#}
           <div class="adviser-top clearfix" style="margin-top: 20px;">
