--- a/views/widget/new_footer/common_footer.html
+++ b/views/widget/new_footer/common_footer.html
@@ -103,6 +103,12 @@
 </div>
 </div>
 
+<script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
+<script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
+<script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/top.js"></script>
+
 <script>
   function adviserlogin () {
     var h = window.location.href;
