--- a/views/widget/new_slide/new_slide3.html
+++ b/views/widget/new_slide/new_slide3.html
@@ -7,7 +7,9 @@
 
       <div class="quick_links_panel">
         <ul>
-          <li style="height: 118px;padding:0;position: relative;background: none;display: none" class="jiang"><img src="{{helper.cdnhost}}/assets/img/jiang.gif" alt="" style="max-width: none;position: absolute;left:50%;margin-left: -22px;"></li>
+          <li class="slide-phone"><img src="{{helper.cdnhost}}/assets/img/slide_phone.png" alt="" style="width: 18px;height: 28px;padding-left: 5px;">
+          <p class="phone-number">{{user.tel}}</p>
+          </li>
           <li class="on zixun message_list current" id="zxzx" style="background: #c13232;cursor: default;{% if user.uid !== login_info.uid %} cursor: pointer;  {% endif %}"  {% if user.uid !== login_info.uid  %}  onclick="openchat_new('{{ user.new_job_number}}')" {% endif %}>
 
             <img src="{{helper.cdnhost}}/assets/img/phone.gif" alt="立即咨询" class="quick-img">
