侧栏电话 评审：淑琴

--- a/views/widget/new_slide/new_slide3.html
+++ b/views/widget/new_slide/new_slide3.html
@@ -1,9 +1,9 @@
 <!--右侧在线咨询-->
 
 {% macro leyu_slide(path,user,login_info,helper) %}
-<div class="mui-mbar-tabs" style="z-index:999;height: 566px;bottom: 86px;*bottom:170px;">
-  <div class="quick_links_wrap quick_links_dockright" style="height: 566px;bottom: 86px;*bottom:170px;">
-    <div class="quick_link_mian" style="margin-top: 86px;">
+<div class="mui-mbar-tabs" style="z-index:999;">
+  <div class="quick_links_wrap quick_links_dockright">
+    <div class="quick_link_mian">
 
       <div class="quick_links_panel">
         <ul>
@@ -19,7 +19,7 @@
             <img src="{{helper.cdnhost}}/assets/img/yijian.png" alt="在线评估" class="quick-img">
             <span>在<br>线<br>评<br>估</span>
             <div id="comment_con"
-                 style="width: 280px;background: #fff;right: 46px;top: -52px;margin-top:92px;*margin-top:182px;position: absolute;border: 1px solid #dcdcdc;display: none">
+                 style="width: 280px;background: #fff;right: 46px;top: -108px;margin-top:92px;*margin-top:182px;position: absolute;border: 1px solid #dcdcdc;display: none">
               <div id="comment_close" style="margin-left: 5px;font-size: 15px;cursor: pointer; color:#333333;">x</div>
               <!--  <iframe id="floatUrls" style="width: 100%;height:100%;" frameborder="no" border="0"
                        marginwidth="0" marginheight="0" scrolling="no" allowtransparency="yes"
