--- a/views/widget/new_slide_yimin/new_slide.html
+++ b/views/widget/new_slide_yimin/new_slide.html
@@ -2,7 +2,7 @@
 
 {% macro leyu_slide(helper) %}
 <div class="mui-mbar-tabs" style="z-index:999">
-  <div class="quick_links_wrap quick_links_dockright">
+  <div class="quick_links_wrap quick_links_dockright"  style="top:200px;">
     <div class="quick_link_mian">
 
       <div class="quick_links_panel">
