--- a/views/widget/top/top_liuxue.html
+++ b/views/widget/top/top_liuxue.html
@@ -1,4 +1,16 @@
 <div class="top" style="position:relative;z-index: 1002;">
+    <div class="dui-layout-lg top-con" style="position: relative;">
+        <div class="top-con-right">
+        <span><a target="_blank" id="getloginUser" class="dui-text-warning-ss" rel="nofollow">注册</a></span>
+        <span class="bor"></span>
+        <span ><a href="javascript:void(0);" style="background: #fff;" id="getloginUser_deng" class="dui-text-warning-ss" rel="nofollow">登录</a></span>
+        <span class="bor">|</span>
+        <span id="weixin" class="top_weibo_img"><img src="{{helper.cdnhost}}/assets/img/top_weixin.png"/></span>
+        <span id="weixin_" class="top_weibo" style="background: url({{helper.cdnhost}}/assets/img/top_liuxue_weixin.png);display: none;"></span>
+        <span id="weibo_top" class="top_weibo_img"><img src="{{helper.cdnhost}}/assets/img/top_weibo.png"/></span>
+        <span id="weibo_"class="top_weibo" style="background: url({{helper.cdnhost}}/assets/img/top_liuxue_weibo.png);display: none;"></span>
+        </div>
+        </div>
 </div>
 <style type="text/css">
   .l_u{
@@ -251,93 +263,8 @@ input[type="checkbox"] {
       </div>
   </div>
 </div>
-<script>
-  $(function() {
-    var login_nickname = JSON.parse(cookie('login_ss'));
-    console.log('login_nickname',login_nickname);
-    var user_type;
-    if (login_nickname == null) {
-      var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
-                '<div class="top-con-right">'+
-                '<span><a target="_blank" id="getloginUser" class="dui-text-warning-ss" rel="nofollow">注册</a></span>'+
-                '<span class="bor"></span>'+
-                '<span ><a href="javascript:void(0);" style="background: #fff;" id="getloginUser_deng" class="dui-text-warning-ss" rel="nofollow">登录</a></span>'+
-                '<span class="bor">|</span>'+
-                '<span id="weixin" class="top_weibo_img"><img src="{{helper.cdnhost}}/assets/img/top_weixin.png"/></span>'+
-                '<span id="weixin_" class="top_weibo" style="background: url('+ajaxUrlPrefix.cdnhost+'/assets/img/top_liuxue_weixin.png);display: none;"></span>'+
-                '<span id="weibo_top" class="top_weibo_img"><img src="{{helper.cdnhost}}/assets/img/top_weibo.png"/></span>'+
-                '<span id="weibo_"class="top_weibo" style="background: url('+ajaxUrlPrefix.cdnhost+'/assets/img/top_liuxue_weibo.png);display: none;"></span>'+
-                '</div>'+
-                '</div>'
-      $(".top").append(val);
-    } else {
-      var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
-                '<div class="top-con-right">'+
-                '<ul>';
-      if (login_nickname.usertype == 1) {
-        val += '<li><i class="msg-icon iconfont nav-name">&#xe675;</i><span><a target="_blank" href="' + fn.urlgen("user_center", "revcomment") + '" rel="nofollow">'+ login_nickname.nickname +'</a></span></li>';
-      } else if (login_nickname.usertype == 2) {
-        val += '<li><i class="msg-icon iconfont nav-name">&#xe675;</i><span><a target="_blank" href="' + fn.urlgen("advisor_center") + '" rel="nofollow">'+ login_nickname.nickname +'</a></span></li>';
-      }else if (login_nickname.usertype == 3) {
-        val += '<li><i class="msg-icon iconfont nav-name">&#xe675;</i><span><a target="_blank" href="' + fn.urlgen("canzan_center") + '" rel="nofollow">'+ login_nickname.nickname +'</a></span></li>';
-      }
-      val += '<li><span class="bor">|</span></li>'+
-              '<li ><a href="javascript:void(0)" style="background: #fff;" onclick="outlogin()" rel="nofollow">退出</a></li>'+
-              '<li style="margin-right: 10px;"><span class="bor">|</span></li>'+
-              '<li style="margin-left: 0px;"><span class="top_weibo_img"><img id="weixin" src="{{helper.cdnhost}}/assets/img/top_weixin.png"/></span></li>'+
-              '<li style="margin-left: 0px;"><span id="weixin_" class="top_weibo" style="background: url('+ajaxUrlPrefix.cdnhost+'/assets/img/top_liuxue_weixin.png);display: none;"></span></li>'+
-              '<li style="margin-left: 0px;"><span class="top_weibo_img"><img id="weibo_top" src="{{helper.cdnhost}}/assets/img/top_weibo.png"/></span></li>'+
-              '<li style="margin-left: 0px;"><span id="weibo_"class="top_weibo" style="background: url('+ajaxUrlPrefix.cdnhost+'/assets/img/top_liuxue_weibo.png);display: none;"></span></li>'+
-                '</ul>'+
-                '</div>'+
-                '</div>';
-      $(".top").append(val);
-    }
 
-  })
-</script>
 
-<script>
-  $(function () {
-    var addEvent = function(element,type,callback){
-      if(element.addEventListener){
-        element.addEventListener(type,callback,false);
-      }else if(element.attachEvent){
-        element.attachEvent('on' + type,callback)
-      }
-    }
-    var weibo_top = document.getElementById('weibo_top');
-    addEvent(weibo_top,'touchstart',function(){
-      if ($('#weibo_').css('display') == 'block') {
-        $("#weibo_").css("display", "none");
-      }
-      else {
-        $("#weibo_").css("display", "block");
-      }
-    });
-    var weixin = document.getElementById('weixin');
-    addEvent(weixin,'touchstart',function(){
-      if ($('#weixin_').css('display') == 'block') {
-        $("#weixin_").css("display", "none");
-      }
-      else {
-        $("#weixin_").css("display", "block");
-      }
-    });
-    $("#weibo_top").on("mouseover", function (e) {
-      $("#weibo_").css("display", "block");
-    });
-    $("#weibo_top").on("mouseout", function (e) {
-      $("#weibo_").css("display", "none");
-    });
-    $("#weixin").on("mouseover", function (e) {
-      $("#weixin_").css("display", "block");
-    });
-    $("#weixin").on("mouseout", function (e) {
-      $("#weixin_").css("display", "none");
-    });
-  })
-</script>
 
 
 {#{% if login_nickname == '' %}
