文章底页水印修改， -评审人    王淑琴

--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -304,7 +304,7 @@
     function watermark() {
       var oTemp = document.createDocumentFragment();
       var mask_div = document.createElement('div');
-      mask_div.appendChild(document.createTextNode('金吉列 www.jjl.cn 400-010-8000'));
+      mask_div.appendChild(document.createTextNode('金吉列 www.jjl.cn'));
       //设置水印div倾斜显示
       mask_div.style.webkitTransform = "rotate(-" + 30 + "deg)";
       mask_div.style.MozTransform = "rotate(-" + 30 + "deg)";
@@ -313,7 +313,8 @@
       mask_div.style.transform = "rotate(-" + 30 + "deg)";
       mask_div.style.visibility = "";
       mask_div.style.position = "absolute";
-      mask_div.style.left ='80px';
+      mask_div.style.left ='50%';
+      mask_div.style.marginLeft ='-125px';
       mask_div.style.top = '40%';
       mask_div.style.overflow = "hidden";
       mask_div.style.zIndex = "1000";
