--- a/views/center_case.html
+++ b/views/center_case.html
@@ -121,7 +121,7 @@
             {% if case_data.list.length > 0 %}
             <div class="right-main clearfix case-list-box">
                 {% for item in case_data.list %}
-                <div class="case-list-item article-list-item">
+                <div class="case-list-item article-list-item" id="art_box_{{item.id}}">
                 {% import "widget2/article/article.html" as article_show %}
                 {{ article_show.article_edit(item, helper) }}
                   {% include "widget2/bottom_comment/bottom_comment_zhuanlan_zhuye.html" %}
@@ -198,7 +198,7 @@
             }else if(item.user_info.usertype ==3){
               identity = 'canzan';
             }
-            aItemHtml += '<div class="case-list-item article-list-item"><div class="art-box clearfix" >'+
+            aItemHtml += '<div class="case-list-item article-list-item" id="art_box_'+item.id+'"><div class="art-box clearfix" >'+
                         '<a target="_blank" href="' +fn.urlgen(item.uid.toString()) +'">'+
                         '<div class="adviser-head" style="background:url(' + fn.avaterimg(item.uid, "small",item.user_info.status,item.user_info.version)+') no-repeat 0 0;background-size: cover;">'+
                         '</div>'+
