--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -134,7 +134,7 @@
         <i class="iconfont">&#xe8c1;</i><span>删除</span>
       </div>
       <div class="opt-btn edit">
-        <i class="iconfont">&#xe61c;</i><a target="_blank" href="{% if item.user_info.usertype == 2 %}{{helper.urlgen('advisor_center/postarticle', item.id | string)}}{% elif item.user_info.usertype == 3 %}{{helper.urlgen('canzan_center/postarticle', item.id | string)}}{% endif %}">编辑</a>
+       <a target="_blank" href="{% if item.user_info.usertype == 2 %}{{helper.urlgen('advisor_center/postarticle', item.id | string)}}{% elif item.user_info.usertype == 3 %}{{helper.urlgen('canzan_center/postarticle', item.id | string)}}{% endif %}"> <i class="iconfont" style="margin-right: 6px;float: left">&#xe61c;</i>编辑</a>
       </div>
     </div>
     <p class="adviser-info-p">
