--- a/views/login/forget.html
+++ b/views/login/forget.html
@@ -5,10 +5,10 @@
   {% include "header_new.html" %}
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
   
-  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/style.css?v=4.1.0">
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/custom.css">
 
-  <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
+  <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
+  <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
   <style type="text/css">
     .xy{
@@ -181,6 +181,7 @@
 <script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
 <!--<script src="{{helper.cdnhost}}/assets/js/nav_forget.js" type="text/javascript" charset="utf-8"></script>-->
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/top.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script>
   $(document).ready(function () {
