qq和微信图片路径改为绝对路径

--- a/views/center_post_code.html
+++ b/views/center_post_code.html
@@ -206,7 +206,7 @@
                         </div>
                         {% else %}
                         <div class="no-code">
-                            <img src="../assets/img/post_weixin.png" alt="" class="icon"/>
+                            <img src="{{helper.cdnhost}}/assets/img/post_weixin.png" alt="" class="icon"/>
                             <label class="upload-code-btn" for="post-wx-code">上传我的微信二维码</label>
                             <div class="info">方便用户随时联系我</div>
                         </div>
@@ -225,7 +225,7 @@
                         </div>
                         {% else %}
                         <div class="no-code">
-                            <img src="../assets/img/post_qq.png" alt="" class="icon"/>
+                            <img src="{{helper.cdnhost}}/assets/img/post_qq.png" alt="" class="icon"/>
                             <label class="upload-code-btn" for="post-qq-code">上传我的QQ二维码</label>
                             <div class="info">方便用户随时联系我</div>
                         </div>
