首页城市不跳转新页面  审核：王淑琴

--- a/views/index.html
+++ b/views/index.html
@@ -353,12 +353,12 @@
         {% for item in cityList %}
         {% if loop.index<49 %}
         <div class="branch_company_text_tilte needJump" data-id="{{item.companyId}}">
-          <a  target="_blank" href="{{helper.urlgen('branch_home','c='+item.companyId)}}" data-id="{{item.companyId}}">{{item.companyName}}</a>
+          <a  href="{{helper.urlgen('branch_home','c='+item.companyId)}}" data-id="{{item.companyId}}">{{item.companyName}}</a>
         </div>
         {% endif %}
         {% endfor %}
         <div class="branch_company_text_tilte" data-id="{{cityList[48].companyId}}">
-          <a  target="_blank" href="http://www.jjl.cn/zt/overseas/vancouver/index.html" data-id="{{cityList[48].companyId}}" >{{cityList[48].companyName}}</a>
+          <a  href="http://www.jjl.cn/zt/overseas/vancouver/index.html" data-id="{{cityList[48].companyId}}" >{{cityList[48].companyName}}</a>
         </div>
       </div>
     </div>
