样式 评审：淑琴（补充上次提交）

--- a/views/about/culture_detail.html
+++ b/views/about/culture_detail.html
@@ -55,10 +55,10 @@
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
 {{ common_nav.common_nav(tdk,helper) }}
 <div class="culture_detail clearfix">
-<h1><div></div>金吉列文化</h1>
+<h1 style="font-weight: normal;"><div></div>金吉列文化</h1>
 <div class="culture_details"></div>
 <div class="culture_detailcon">
-  <h1>{{ culture_detail.list.title }}</h1>
+  <h1 style="font-weight: normal;">{{ culture_detail.list.title }}</h1>
   <div class="culture_detailcing">{{ culture_detail.list.content | safe }}</div>
 </div>
 </div>
