修改参赞 不加粗 审核：王维久

--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -111,8 +111,8 @@
       {% include "widget2/blank/blank.html" %}
       {% endif %}
       {% else %}{# 参赞介绍 #}
-      <h2 style="font-size: 18px; margin: 20px">参赞介绍：</h2>
-      <div class="canzanps" style="padding-bottom: 20px;margin: 0 20px">{{ canzan_jianjie.description | safe }}</div>
+      <h2 style="font-size: 18px; margin: 20px;font-weight: normal">参赞介绍：</h2>
+      <div class="canzanps" style="padding-bottom: 20px;margin: 0 20px;">{{ canzan_jianjie.description | safe }}</div>
       {% endif %}
     </div>
   </div>
