修改普通用户登录

--- a/views/login/binding.html
+++ b/views/login/binding.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/custom.css"/>
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/layer.css"/>
   {% include "header_new.html" %}
+  <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
+  <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
+  <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
   <style type="text/css">
     .register_nei_title {
@@ -74,6 +77,7 @@
   </div>
 </div>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js"></script>-->
+<script src="{{helper.cdnhost}}/assets/js/top.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script>
   $(document).ready(function () {
