活动组件 评审：淑琴

--- a/views/about/activity.html
+++ b/views/about/activity.html
@@ -167,7 +167,7 @@
               <li><i class="iconfont">&#xe6be;</i><span>活动时间：{{item.start_time | shorten(-3)}}至{{item.end_time | shorten(-3)}}</span></li>
               <li><i class="iconfont">&#xe63a;</i><span>活动地址：{{item.address_des | ellipsis(27)}} </span></li>
               <li><i class="iconfont">&#xe662;</i><span>针对人群：{{item.crowd}} </span></li>
-              <li class="booking"><span onclick="rand_zixun('{{  item.country | getCountry }}',156,'{{item.id}}')" >立即预约</span></li>
+              <li class="booking" onclick="rand_zixun('{{  item.country | getCountry }}',156,'{{item.id}}')"><span  >立即预约</span></li>
             </ul>
           </div>
         </div>
@@ -182,7 +182,7 @@
               <li><i class="iconfont">&#xe6be;</i><span>活动时间：{{item.start_time | shorten(-3)}}至{{item.end_time | shorten(-3)}}</span></li>
               <li><i class="iconfont">&#xe63a;</i><span>活动地址：{{item.address_des | ellipsis(27)}}  </span></li>
               <li><i class="iconfont">&#xe662;</i><span>针对人群：{{item.crowd}} </span></li>
-              <li class="booking"><span onclick="rand_zixun('{{  item.country | getCountry }}',156,'{{item.id}}')">立即预约</span></li>
+              <li class="booking" onclick="rand_zixun('{{  item.country | getCountry }}',156,'{{item.id}}')"><span >立即预约</span></li>
             </ul>
           </div>
         </div>
