--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -3,7 +3,7 @@
 <head > 
   {% include "header_new.html" %}
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
-  <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper-2.7.6.js"></script>
+  <script src="{{helper.cdnhost}}/dep/js/idangerous.swipernew.js"></script>
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/guwen_yonghu.css" >
   <style type="text/css">
     .list-h{
