--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/logo.css" >
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/index.css">
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
-<script src="{{helper.cdnhost}}/dep/js/idangerous.swiper-2.7.6.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/idangerous.swipernew.js"></script>
 <style type="text/css">
   .xuanze-chengshi p a:last-child{
     margin-right: 0;
