ad case $.cookie

--- a/views/center_case.html
+++ b/views/center_case.html
@@ -157,7 +157,7 @@
   <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
   <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js"></script>
+  <!--<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js"></script>-->
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
   <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
