rename bootstrap nodemain.css

--- a/views/header_new.html
+++ b/views/header_new.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/base.css">
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/dui.min.css">
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/dui-append.min.css">
-  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/nodemain2.min.css">
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/nodemainnew.min.css">
   <!--[if lt IE 9]>
   <script src="{{helper.cdnhost}}/dep/js/html5.js"></script>
   <![endif]-->
