rename dui swiper layer

--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -4,7 +4,7 @@
   {% include "header_new.html" %}
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/guwen_yonghu.css" >
-  <script src="{{helper.cdnhost}}/dep/js/idangerous.swipernew.js"></script>
+  <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper-2.7.6-1.js"></script>
   <style type="text/css">
     .canzanps p {
       font-size: 14px;
@@ -141,7 +141,7 @@
 {% endif %}
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
-<script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/layer-1.min.js"></script>
 <script>
   $(function() {
     var login_ss = null;
