--- a/views/header_new.html
+++ b/views/header_new.html
@@ -8,8 +8,8 @@
   <meta name="baidu-site-verification" content="a01e20b4ccd416ba45d581ee3560ed84"/>
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/base.css">
-  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/dui.min.css">
-  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/dui-append.min.css">
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/dui-1.min.css">
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/dui-append-1.min.css">
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/nodemainnew.min.css">
   <!--[if lt IE 9]>
   <script src="{{helper.cdnhost}}/dep/js/html5.js"></script>
@@ -22,7 +22,7 @@
   <script  src="{{helper.cdnhost}}/dep/js/jquery-1.9.1.min.js"></script>
   <!--<script src="{{helper.cdnhost}}/dep/js/jquery.xdomainrequest.min.js"></script>-->
   <script src="{{helper.cdnhost}}/dep/js/cookie.js"></script>
-  <script src="{{helper.cdnhost}}/dep/js/dui.js"></script>
+  <script src="{{helper.cdnhost}}/dep/js/dui-1.js"></script>
   <script src="{{helper.cdnhost}}/assets/font/iconfont.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/json2.js" ></script>
   {% if helper.version == 'development' %}
