--- a/views/login/register.html
+++ b/views/login/register.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/style.css?v=4.1.0" >
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/custom.css">
 
-  <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
+  <script src="{{helper.cdnhost}}/dep/js/layer-1.min.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
   <style type="text/css">
     .xy{
