--- a/views/adviser_hot.html
+++ b/views/adviser_hot.html
@@ -4,7 +4,7 @@
   {% include "header_new.html" %}
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/guwen_yonghu.css" >
-  <script src="{{helper.cdnhost}}/dep/js/idangerous.swipernew.js"></script>
+  <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper-2.7.6.js"></script>
 </head>
 <body style="background: #f5f5f5">
 {% include "widget/common_hide/common_hide.html"%}
@@ -102,7 +102,7 @@
 <script src="{{helper.cdnhost}}/assets/js/slide2.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
-<script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/layer-1.min.js"></script>
 <script>
   $(function() {
     var login_ss = null;
