--- a/views/center_comment.html
+++ b/views/center_comment.html
@@ -128,7 +128,7 @@
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
-<script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/layer-1.min.js"></script>
 <script>
     $(function () {
         var login_ss = null;
