--- a/views/center_post_code.html
+++ b/views/center_post_code.html
@@ -247,7 +247,7 @@
 {% endif %}
 <script  src="{{helper.cdnhost}}/assets/js/upload_wx_code.js"></script>
 <script  src="{{helper.cdnhost}}/assets/js/upload_qq_code.js"></script>
-<script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/layer-1.min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 <script>
     $(function() {
