--- a/views/login/binding.html
+++ b/views/login/binding.html
@@ -10,7 +10,7 @@
   {% include "header_new.html" %}
   <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
   <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
-  <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
+  <script src="{{helper.cdnhost}}/dep/js/layer-1.min.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
   <style type="text/css">
     .register_nei_title {
