--- a/views/so_article.html
+++ b/views/so_article.html
@@ -4,7 +4,7 @@
 {% include "header_new.html" %}
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/search_result.css"/>
-<script src="{{helper.cdnhost}}/dep/js/idangerous.swipernew.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/idangerous.swiper-2.7.6-1.js"></script>
 <style type="text/css">
     .pagination-box{
         float: left;
