--- a/views/widget/top/top_login.html
+++ b/views/widget/top/top_login.html
@@ -279,7 +279,7 @@ input[type="checkbox"] {
 <script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
 <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
 <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
-<script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/layer-1.min.js"></script>
 
 <script>
     $(function() {
