广告图点击请求 评审：淑琴

--- a/views/about/about.html
+++ b/views/about/about.html
@@ -65,6 +65,10 @@
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js" ></script>-->
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
-
+<script>
+  $(function(){
+    show_guanggao()
+  })
+</script>
 </body>
 </html>
