--- a/views/about/activity.html
+++ b/views/about/activity.html
@@ -239,5 +239,9 @@
 <script src="{{helper.cdnhost}}/assets/js/footer.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js" ></script>
-
+<script>
+  $(function(){
+    show_guanggao()
+  })
+</script>
 </html>
