--- a/views/counsellor_set.html
+++ b/views/counsellor_set.html
@@ -185,5 +185,10 @@
 <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
+<script>
+  $(function(){
+    show_guanggao()
+  })
+</script>
 </body>
 </html>
