--- a/views/widget/new_slide/new_slide3.html
+++ b/views/widget/new_slide/new_slide3.html
@@ -16,7 +16,7 @@
             <span>立<br>即<br>咨<br>询</span>
           </li>
           <li class="on" id="r_comment">
-            <img src="{{helper.cdnhost}}/assets/img/yijian.png" alt="在线评估" class="quick-img">
+            <img src="{{helper.cdnhost}}/assets/img/yijian.png" alt="在线评估" class="quick-img guanggao-slide">
             <span>在<br>线<br>评<br>估</span>
             <div id="comment_con"
                  style="width: 280px;background: #fff;right: 46px;top: -108px;margin-top:92px;*margin-top:182px;position: absolute;border: 1px solid #dcdcdc;display: none">
